src/snapshots/fuzz_crash/fuzz_crash_016.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
0|
~~~PROBLEMS
MISSING HEADER

The module header is missing.

0|
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected '|' in this expression.

0|
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

0|
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
Int(1:1-1:2),OpBar(1:2-1:3),EndOfFile(1:3-1:3),
~~~PARSE
(file (1:1-1:3)
	(malformed_header (1:1-1:2) "missing_header")
	(statements (malformed_expr (1:3-1:3) "expected_expr_bar")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END